@@ -13,6 +13,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.9.23</kotlin.version>
         <javafx.version>21.0.2</javafx.version>
+        <jpackage.appVersion>0.1.0</jpackage.appVersion>
+        <jpackage.icon>${project.basedir}/src/main/resources/images/TypeFast.ico</jpackage.icon>
     </properties>
 
     <dependencies>
@@ -97,11 +99,9 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <version>${javafx.version}</version>
                 <configuration>
                     <mainClass>com.typingspeed.ui.TypingTutorAppKt</mainClass>
-                    <launcher>typing-speed-tutor</launcher>
-                    <stripNativeCommands>false</stripNativeCommands>
                 </configuration>
             </plugin>
             <plugin>
@@ -122,4 +122,170 @@
             <url>https://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
+
+    <profiles>
+        <profile>
+            <id>installer</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <executions>
+                            <execution>
+                                <id>copy-runtime-dependencies</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <includeScope>runtime</includeScope>
+                                    <outputDirectory>${project.build.directory}/jpackage/lib</outputDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>copy-application-jar</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>${project.groupId}</groupId>
+                                            <artifactId>${project.artifactId}</artifactId>
+                                            <version>${project.version}</version>
+                                            <type>jar</type>
+                                            <outputDirectory>${project.build.directory}/jpackage</outputDirectory>
+                                            <destFileName>${project.build.finalName}.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.7.0</version>
+                        <executions>
+                            <execution>
+                                <id>create-windows-installer</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                                <configuration>
+                                    <type>EXE</type>
+                                    <name>Typing Speed Test</name>
+                                    <vendor>Lintshiwe</vendor>
+                                    <destination>${project.build.directory}/installer</destination>
+                                    <input>${project.build.directory}/jpackage</input>
+                                    <appVersion>${jpackage.appVersion}</appVersion>
+                                    <icon>${jpackage.icon}</icon>
+                                    <mainJar>${project.build.finalName}.jar</mainJar>
+                                    <mainClass>com.typingspeed.ui.TypingTutorAppKt</mainClass>
+                                    <modulePaths>
+                                        <modulePath>${project.build.directory}/jpackage/lib</modulePath>
+                                    </modulePaths>
+                                    <addModules>javafx.controls,javafx.fxml,javafx.graphics</addModules>
+                                    <winShortcut>true</winShortcut>
+                                    <winMenu>true</winMenu>
+                                    <winDirChooser>true</winDirChooser>
+                                    <arguments>
+                                        <argument>--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argument>
+                                    </arguments>
+                                    <javaOptions>
+                                        <javaOption>-Dprism.order=sw</javaOption>
+                                    </javaOptions>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>installer-msi</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <executions>
+                            <execution>
+                                <id>copy-runtime-dependencies</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <includeScope>runtime</includeScope>
+                                    <outputDirectory>${project.build.directory}/jpackage/lib</outputDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>copy-application-jar</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>${project.groupId}</groupId>
+                                            <artifactId>${project.artifactId}</artifactId>
+                                            <version>${project.version}</version>
+                                            <type>jar</type>
+                                            <outputDirectory>${project.build.directory}/jpackage</outputDirectory>
+                                            <destFileName>${project.build.finalName}.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.7.0</version>
+                        <executions>
+                            <execution>
+                                <id>create-windows-msi-installer</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                                <configuration>
+                                    <type>MSI</type>
+                                    <name>Typing Speed Test</name>
+                                    <vendor>Lintshiwe</vendor>
+                                    <destination>${project.build.directory}/installer-msi</destination>
+                                    <input>${project.build.directory}/jpackage</input>
+                                    <appVersion>${jpackage.appVersion}</appVersion>
+                                    <mainJar>${project.build.finalName}.jar</mainJar>
+                                    <mainClass>com.typingspeed.ui.TypingTutorAppKt</mainClass>
+                                    <modulePaths>
+                                        <modulePath>${project.build.directory}/jpackage/lib</modulePath>
+                                    </modulePaths>
+                                    <addModules>javafx.controls,javafx.fxml,javafx.graphics</addModules>
+                                    <winShortcut>true</winShortcut>
+                                    <winMenu>true</winMenu>
+                                    <winDirChooser>true</winDirChooser>
+                                    <arguments>
+                                        <argument>--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argument>
+                                    </arguments>
+                                    <javaOptions>
+                                        <javaOption>-Dprism.order=sw</javaOption>
+                                    </javaOptions>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
